[tool.poetry]
name = "q4x-converter"
version = "1.0.0"
description = "Converts q4x to mp4"
authors = ["Zsombor Bodnár <zsombor.bodnar@kszk.bme.hu>"]
readme = "README.md"
packages = [{include = "q4x_converter"}]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
gizeh = "^0.1.11"
pycairo = "^1.21.0"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
